# Freertos_task

./: .gitignore  CMakeLists.txt  README.md
app/: main.c
app/bootloader/: boot_decision.c  boot_decision.h
app/config/: app_config.h
app/core/: app_tasks.c  app_tasks.h  charger_fsm.c  charger_fsm.h  event_bus.c  event_bus.h  protection.c  protection.h
app/drivers/: bsp_time.c  bsp_time.h  can_if.c  can_if.h  i2c_devices.c  i2c_devices.h  rs485_if.c  rs485_if.h  spi_rfid.c  spi_rfid.h
app/network/: net_manager.c  net_manager.h  telemetry.c  telemetry.h
app/ota/: ota_manager.c  ota_manager.h  partition_table.h
app/protocol/: dlt645.c  dlt645.h  gbt27930.c  gbt27930.h
docs/: FREERTOS_STANDARD_GUIDE.md  INTERVIEW_GUIDE.md
tests/: test_ev_charger_automation.py
